--- a/.github/workflows/bump-packages.yml
+++ b/.github/workflows/bump-packages.yml
@@ -1,4 +1,4 @@
-name: Bump quick-ssm formula
+name: Check sources for new releases
 
 on:
   workflow_dispatch:
@@ -25,10 +25,10 @@ jobs:
         id: get_release
         run: |
           # Get latest release info from GitHub API
-          RELEASE_INFO=$(curl -s https://api.github.com/repos/bevelwork/quick_ssm/releases/latest)
+          RELEASE_INFO=$(curl -s https://api.github.com/repos/bevelwork/quick_pipreqs/releases/latest)
           VERSION=$(echo "$RELEASE_INFO" | jq -r '.tag_name' | sed 's/^v//')
           # Construct the exact archive URL used in the formula
-          ARCHIVE_URL="https://github.com/bevelwork/quick_ssm/archive/refs/tags/${VERSION}.tar.gz"
+          ARCHIVE_URL="https://github.com/bevelwork/quick_pipreqs/archive/refs/tags/${VERSION}.tar.gz"
           
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           echo "archive_url=$ARCHIVE_URL" >> "$GITHUB_OUTPUT"
@@ -38,8 +38,8 @@ jobs:
         id: calc_sha
         run: |
           # Download the tarball and calculate SHA256
-          curl -L -o /tmp/quick_ssm.tar.gz "${{ steps.get_release.outputs.archive_url }}"
-          SHA256=$(sha256sum /tmp/quick_ssm.tar.gz | cut -d' ' -f1)
+          curl -L -o /tmp/quick_pipreqs.tar.gz "${{ steps.get_release.outputs.archive_url }}"
+          SHA256=$(sha256sum /tmp/quick_pipreqs.tar.gz | cut -d' ' -f1)
           echo "sha256=$SHA256" >> "$GITHUB_OUTPUT"
           echo "SHA256: $SHA256"
 
@@ -49,11 +49,11 @@ jobs:
           SHA256="${{ steps.calc_sha.outputs.sha256 }}"
           
           # Update the formula file
-          sed -i "s|url \".*\"|url \"https://github.com/bevelwork/quick_ssm/archive/refs/tags/${VERSION}.tar.gz\"|" Formula/quick-ssm.rb
-          sed -i "s|sha256 \".*\"|sha256 \"${SHA256}\"|" Formula/quick-ssm.rb
+          sed -i "s|url \".*\"|url \"https://github.com/bevelwork/quick_pipreqs/archive/refs/tags/${VERSION}.tar.gz\"|" Formula/quick-pipreqs.rb
+          sed -i "s|sha256 \".*\"|sha256 \"${SHA256}\"|" Formula/quick-pipreqs.rb
           
           echo "Updated formula:"
-          cat Formula/quick-ssm.rb
+          cat Formula/quick-pipreqs.rb
 
       - name: Check if changes exist
         id: check_changes
